# ractor

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.agent  Dockerfile.api  Dockerfile.askrepo  Dockerfile.content  Dockerfile.controller  Dockerfile.gateway  Dockerfile.githex  Dockerfile.gpt  Dockerfile.host  Dockerfile.mcp  Dockerfile.operator  Dockerfile.sandbox  Dockerfile.server  Dockerfile.session  HARMONY_IMPLEMENTATION_PLAN.md  LICENSE.md  NEW_PROMPT.md  OLLAMA_FIX_PLAN.md  ORIGINAL_RENAME_PLAN.md  PLAN_v0.4.0.md  PROGRESS_REPORT.md  README.md  SESSIONS.md  askrepo.md  inference_providers.yaml  instructions.md  openapi.yaml  package-lock.json  package.json  plan.md  prompt_plan.md  setup.sh  test_session.sh
.claude/commands/: bump.md  commit.md  release.md
.github/workflows/: deploy-website.yml  release.yml
apps/githex/: .gitignore  package-lock.json  package.json
apps/ractor-apps-askrepo/: Cargo.toml  README.md
apps/raworc-apps-askrepo/: Cargo.toml  README.md
apps/raworc-apps-askrepo/src/: config.rs  main.rs  raworc.rs  twitter.rs
assets/nginx/: gateway.conf
cli/: .gitignore  README.md  index.js  package-lock.json  package.json
cli/commands/: agent.js  api.js  auth.js  clean.js  cleanup.js  dev_build.js  dev_rebuild.js  doctor.js  fix.js  login.js  logout.js  pull.js  reset.js  session.js  setup.js  (+3 more)
config/: tsbx.sample.json
content/: index.html
docs/: SPEC.md
gpt/: app.py
operator/: .gitignore  OPERATOR_UI_PLAN.md  package-lock.json  package.json  svelte.config.js  vite.config.js
scripts/: bootstrap.sh  build.sh  bump.sh  clear.sh  doctor.sh  get-tsbx.sh  install.sh  link.sh  package_binary.sh  publish.sh  push.sh  rebuild.sh  release.sh  reset.sh  restart.sh  setup-nvidia.sh  setup.sh  start.sh  stop.sh
src/: main.rs
website/: CONTRIBUTING.md  README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
(+297 files in other folders)
