[package]
name = "raworc"
version = "0.9.1"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["trace", "fs"] }
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = "9.0"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
# tower_governor = "0.4"  # Removed for now
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
async-trait = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql", "json", "uuid", "chrono", "migrate"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.8"
thiserror = "2.0"
ctrlc = "3.4"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
bollard = "0.17"
futures = "0.3.31"
futures-util = "0.3"
tar = "0.4"
tempfile = "3.0"
tokio-util = { version = "0.7", features = ["codec"] }
hyper = { version = "0.14", features = ["full"] }
url = "2.5"

[[bin]]
name = "raworc-api"
path = "src/api/main.rs"

[[bin]]
name = "raworc-controller" 
path = "src/controller/main.rs"

[[bin]]
name = "raworc-agent"
path = "src/agent/main.rs"

[[bin]]
name = "raworc-content"
path = "src/content/main.rs"
